--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -12,7 +12,7 @@
       {% block breadcrumb %}
       <li><a href="{% url 'index' %}">HOME</a></li>
       {%if perms.report.can_generate%}
-      <li><a href="{% url 'report:report' %}">Relatorio</a></li>
+      <li><a href="{% url 'report:report' %}">Reports</a></li>
       {%endif%}
 
       {% if request.user.is_staff %}
@@ -20,13 +20,13 @@
       {% if request.user.is_staff %}
       {% endif %}
       <li><a href="{% url 'users:logout' %}">Logout</a></li>
-      <li><a href="{% url 'users:register' %}">Registrar</a></li>
+      <li><a href="{% url 'users:register' %}">Register</a></li>
       {%if perms.users.can_edit_user%}
-      <li><a href="{% url 'users:list_user_edit' %}">Editar Usuarios</a></li>
+      <li><a href="{% url 'users:list_user_edit' %}">Edit Users</a></li>
       {%endif%}
 	<!-- fixing bug of users insted user -->
 	{%if perms.users.can_delete_user%}
-      <li><a href="{% url 'users:list_user_delete' %}">Deletar Usuarios</a></li>
+      <li><a href="{% url 'users:list_user_delete' %}">Delete Users</a></li>
       {%endif%}
 
       {% endblock %}
