--- a/SME_UnB/users/templates/users/delete_user.html
+++ b/SME_UnB/users/templates/users/delete_user.html
@@ -2,14 +2,14 @@
 
 {% block title %}
 {% endblock %}
-<title>Deletar  Usuario</title>
+<title>Delete  Users</title>
 
 {% block body %}
 
 <div class="flex-align"><!-- começa o flex -->
   <div class="container span7 text-center col-md-4 col-md-offset-3" style="margin: 0 auto;float: none; border: 3px solid red">
     <div class="row">
-      <h1>Deletar usuario</h1>
+      <h1>Delete users</h1>
       <p2>{{info}}</p2>
 
       <h1> </h1>
@@ -19,9 +19,9 @@
         {% csrf_token %}
 
       </div>
-      <button type="submit" class="btn btn-danger" href="{% url 'users:list_user_delete' %}" style="width: 250px; height: 50px">Deletar</button>
+      <button type="submit" class="btn btn-danger" href="{% url 'users:list_user_delete' %}" style="width: 250px; height: 50px">Delete</button>
       <h1> </h1>
-      <p><a class="btn btn-primary" href="{% url 'users:list_user_delete' %}" role="button" style="width: 250px; height: 50px">Cancelar</a></p>
+      <p><a class="btn btn-primary" href="{% url 'users:list_user_delete' %}" role="button" style="width: 250px; height: 50px">Cancel</a></p>
     </form>
   </div>
 </div>
