Translating for english - lists

--- a/SME_UnB/users/templates/users/list_user_delete.html
+++ b/SME_UnB/users/templates/users/list_user_delete.html
@@ -2,17 +2,17 @@
 
 {% block dashboard_content %}
 <div class="margin">
-  <h1 class="text-center">Lista de usuarios cadastrados:</h>
+  <h1 class="text-center">List of Registered Users :</h>
   </div>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <div class="margin">
         <table class ="table table-bordered">
           <tr>
-            <th>Primeiro Nome</th>
-            <th>Ultimo Nome</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Email</th>
-            <th>Editar</th>
+            <th>Edit</th>
           </tr>
           {% for user in users %}
           <tr>
