--- a/SME_UnB/users/templates/users/list_user_edit.html
+++ b/SME_UnB/users/templates/users/list_user_edit.html
@@ -4,7 +4,7 @@
 
 
 <div class="margin">
-  <h1 class="text-center">Lista de usuarios cadastrados:</h>
+  <h1 class="text-center">List of registered Users :</h>
   </div>
 
   <br />
@@ -14,10 +14,10 @@
 
         <table class ="table table-bordered">
           <tr>
-            <th>Primeiro Nome</th>
-            <th>Ultimo Nome</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Email</th>
-            <th>Editar</th>
+            <th>Edit</th>
 
           </tr>
           {% for user in users %}
