--- a/SME_UnB/templates/base.html
+++ b/SME_UnB/templates/base.html
@@ -24,16 +24,16 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 {% if user.is_authenticated %}
-                <li><a href="{% url 'transductor:index'%}">Transductors</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="{% url 'users:dashboard'%}">Minha Conta</a></li>
-                  <li><a href="{% url 'users:logout'%}">SAIR</a></li>
+                <li><a href="{% url 'transductor:index'%}">{% trans "Transductors" %}</a></li>
+                <li><a href="#about">{% trans "About" %}</a></li>
+                <li><a href="#contact">{% trans "Contact" %}</a></li>
+                <li><a href="{% url 'users:dashboard'%}">{% trans "My Account" %}</a></li>
+                  <li><a href="{% url 'users:logout'%}">{% trans "Logout" %}</a></li>
                 {% else %}
-                <li><a href="{% url 'transductor:index'%}">Transductors</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="{% url 'users:login'%}">Login</a></li>
+                <li><a href="{% url 'transductor:index'%}">{% trans "Transductors" %}</a></li>
+                <li><a href="#about">{% trans "About" %}</a></li>
+                <li><a href="#contact">{% trans "Contact" %}</a></li>
+                <li><a href="{% url 'users:login'%}">{% trans "Login" %}</a></li>
                 {% endif %}
               </ul>
             </div>
