--- a/SME_UnB/users/templates/users/list_user_delete.html
+++ b/SME_UnB/users/templates/users/list_user_delete.html
@@ -2,17 +2,17 @@
 
 {% block dashboard_content %}
 <div class="margin">
-  <h1 class="text-center">List of Registered Users :</h>
+  <h1 class="text-center">{% trans "List of Registered Users:" %}</h>
   </div>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <div class="margin">
         <table class ="table table-bordered">
           <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Edit</th>
+            <th>{% trans "First Name" %}</th>
+            <th>{% trans "Last Name" %}</th>
+            <th>{% trans "Email" %}</th>
+            <th>{% trans "Edit" %}</th>
           </tr>
           {% for user in users %}
           <tr>
