--- a/SME_UnB/users/templates/users/delete_user.html
+++ b/SME_UnB/users/templates/users/delete_user.html
@@ -2,8 +2,7 @@
 
 {% block title %}
 {% endblock %}
-<title>Delete  Users</title>
-
+<title>SME - Delete  Users</title>
 {% block body %}
 
 <div class="flex-align"><!-- começa o flex -->
