--- a/SME_UnB/users/templates/users/edit_user.html
+++ b/SME_UnB/users/templates/users/edit_user.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
+<title>SME - Editar Usuário</title>
 {% endblock %}
-<title>New User</title>
+
 
 {% block body %}
 
