--- a/SME_UnB/templates/base.html
+++ b/SME_UnB/templates/base.html
@@ -9,11 +9,12 @@
   {% block title %}
   <title>SME - UnB</title>
   {% endblock %}
+  <link rel="stylesheet" type="text/css" href="{% static 'users/css/simple-sidebar.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'data_reader/css/style.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"  media="screen,projection"/>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-inverse navbar-static-top" >
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -22,12 +23,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">SME - UnB</a>
+              {% if user.is_authenticated %}
+                <a class="navbar-brand" href="{% url 'users:dashboard'%}">SME - UnB</a>
+              {% else %}
+                <a class="navbar-brand" href="/">SME - UnB</a>
+              {% endif %}
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 {% if user.is_authenticated %}
                   <ul class="nav navbar-nav">
-                    <li><a href="{% url 'transductor:index'%}">Transductors</a></li>
+
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
