--- a/SME_UnB/users/templates/userRegister/register.html
+++ b/SME_UnB/users/templates/userRegister/register.html
@@ -1,10 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'users/dashboard.html' %}
 
 {% block title %}
+<title>SME - Novo Usuário</title>
 {% endblock %}
-<title>New User</title>
 
-{% block body %}
+
+{% block  dashboard_content %}
 
 <div class="jumbotron">
   <div class="container">
