--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -2,33 +2,29 @@
 
 
 {% block body %}
-<div class="pure-g-r content-ribbon">
-  <div class="pure-u-1">
-    <ul class="breadcrumb">
+<div id="wrapper">
+  <div id="sidebar-wrapper">
+    <ul class="sidebar-nav">
       {% block breadcrumb %}
-      <li><a href="{% url 'index' %}">HOME</a></li>
       {%if perms.report.can_generate%}
       <li><a href="{% url 'report:report' %}">Reports</a></li>
       {%endif%}
-
-      {% if request.user.is_staff %}
-      {% endif %}
+      <li><a href="{% url 'transductor:index'%}">Transductors</a></li>
       {% if request.user.is_staff %}
       {% endif %}
       <li><a href="{% url 'users:register' %}">Register</a></li>
       {%if perms.users.can_edit_user%}
       <li><a href="{% url 'users:list_user_edit' %}">Edit Users</a></li>
       {%endif%}
-	<!-- fixing bug of users insted user -->
-	{%if perms.users.can_delete_user%}
+	    <!-- fixing bug of users insted user -->
+	    {%if perms.users.can_delete_user%}
       <li><a href="{% url 'users:list_user_delete' %}">Delete Users</a></li>
       {%endif%}
-
       {% endblock %}
     </ul>
   </div>
-  <div class="pure-u-2-3">
-    <div class="inner">
+  <div id="page-content-wrapper">
+    <div class="container-fluid">
       {% block dashboard_content %}
       <p><strong>Usuário</strong>: {{ user }}</p>
       <p><strong>E-mail</strong>: {{ user.email }}</p>
@@ -36,4 +32,6 @@
     </div>
   </div>
 </div>
+
+
 {% endblock %}
