--- a/SME_UnB/users/templates/users/login.html
+++ b/SME_UnB/users/templates/users/login.html
@@ -6,16 +6,22 @@
 
   {% block body %}
   <div class="container">
-    <form class="form-signin" method="POST" action="{% url "users:login"%}">
-      {% csrf_token %}
-      <h2 class="form-signin-heading text-center">Log in</h2>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="user" id="inputUsername" name="username" class="form-control" placeholder="Email" required autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-    </form>
+    <div class="col-md-4 col-md-offset-4">
+      
+      <form class="form-signin" method="POST" action="{% url "users:login"%}">
+        {% csrf_token %}
+        <h2 class="form-signin-heading text-center">Log in</h2>
+        <div class="form-group">
+          <label for="inputEmail" class="sr-only">Email address</label>
+          <input type="user" id="inputUsername" name="username" class="form-control" placeholder="Email" required autofocus>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+      </form>
+    </div>
 
   </div>
   {% endblock %}
