--- a/SME_UnB/transductor/templates/transductor/model_index.html
+++ b/SME_UnB/transductor/templates/transductor/model_index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load i18n %}
 {% block title %}
     <title>{% trans "Transductors Models" %}</title>
 {% endblock %}
