--- a/SME_UnB/transductor/templates/transductor/index.html
+++ b/SME_UnB/transductor/templates/transductor/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load i18n %}
 {% block title %}
     <title>{% trans "Transductors" %}</title>
 {% endblock %}
@@ -43,7 +43,7 @@
     {% endif %}
 </table>
 {%else%}
-    <h1>{% trans "Sem permissao para ver os transdutores" %}</h1>
+    <h1>{% trans "No permission to see the transductors" %}</h1>
 {% endif %}
 </div>
 {% endblock %}
