--- a/SME_UnB/users/templates/users/edit_user.html
+++ b/SME_UnB/users/templates/users/edit_user.html
@@ -1,79 +1,92 @@
-{% extends 'base.html' %}
+{% extends 'users/dashboard.html' %}
 
 {% block title %}
 <title>SME - Editar Usuário</title>
 {% endblock %}
 
 
-{% block body %}
-
+{% block dashboard_content %}
 <div class="jumbotron">
   <div class="container">
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
 
-    <h1>Edit user</h1>
-    <p2>{{info}}</p2>
+          <h1>Edit user</h1>
+          <p2>{{info}}</p2>
 
-    <h1> </h1>
-    <form class="col-md-6 configdiv" action="register" method="post">
-      <p2>{{falha}}</p2>
+          <h1> </h1>
+          <form class="configdiv" action="register" method="post">
+            <p2>{{falha}}</p2>
 
-      {% csrf_token %}
-      <div class="form-group">
-        <input type="text" name= "first_name" placeholder="{{user.first_name}}" class="form-control">
+            {% csrf_token %}
+            <div class="form-group">
+              <input type="text" name= "first_name" placeholder="{{user.first_name}}" class="form-control">
+            </div>
+
+            <div class="form-group">
+              <input type="text" name= "last_name" placeholder="{{user.last_name}}" class="form-control">
+            </div>
+
+            <div class="form-group">
+              <input type="text" name= "email" placeholder="{{user.email}}" class="form-control">
+            </div>
+
+
+            <div class="form-group">
+              <input type="password" name ="password" placeholder="Nova Senha" class="form-control">
+            </div>
+
+            <div class="form-group">
+              <input type="password" name ="confirmPassword" placeholder="confirmar nova senha" class="form-control">
+            </div>
+
+            <p1>Tipo de usuario:</p1>
+            <div class="form-group">
+              <label class="radio-inline">
+                <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Commun User
+              </label>
+              <label class="radio-inline">
+                <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Adiministrator
+              </label>
+
+            </div>
+
+            <p1>Nivel de acesso:</p1>
+            <div class="form-group">
+              <div class="checkbox">
+                <label class="checkbox-inline checkbox-success">
+                  <input type="checkbox" id="permissions_checkbox1" name="can_generate" {{can_generate}} > Generate Reports
+                </label>
+              </div>
+              <div class="checkbox">
+                <label class="checkbox-inline checkbox-success">
+                  <input type="checkbox" id="permissions_checkbox2" name="view_transductors" {{view_transductors}}> Manage Transductors
+                </label>
+              </div>
+              <div class="checkbox">
+                <label class="checkbox-inline checkbox-success">
+                  <input type="checkbox" id="permissions_checkbox3" name="edit_users" {{edit_users}} > Edit Users
+                </label>
+              </div>
+              <div class="checkbox">
+                <label class="checkbox-inline checkbox-success">
+                  <input type="checkbox" id="permissions_checkbox3" name="delete_users" {{delete_users}}> Delete Users
+                </label>
+              </div>
+
+
+            </div>
+            <button type="submit" class="btn btn-success" >Register</button>
+
+            <a class="btn btn-primary" href="{% url 'users:list_user_edit' %}" role="button">Cancel</a>
+
+
+          </form>
+
+        </div>
       </div>
-
-      <div class="form-group">
-        <input type="text" name= "last_name" placeholder="{{user.last_name}}" class="form-control">
-      </div>
-
-      <div class="form-group">
-        <input type="text" name= "email" placeholder="{{user.email}}" class="form-control">
-      </div>
-
-
-      <div class="form-group">
-        <input type="password" name ="password" placeholder="Nova Senha" class="form-control">
-      </div>
-
-      <div class="form-group">
-        <input type="password" name ="confirmPassword" placeholder="confirmar nova senha" class="form-control">
-      </div>
-
-      <p1>Tipo de usuario:</p1>
-      <div class="form-group">
-        <label class="radio-inline">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> Commun User
-        </label>
-        <label class="radio-inline">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> Adiministrator
-        </label>
-
-      </div>
-
-      <p1>Nivel de acesso:</p1>
-      <div class="form-group">
-        <label class="checkbox-inline checkbox-success">
-          <input type="checkbox" id="permissions_checkbox1" name="can_generate" {{can_generate}} > Generate Reports
-        </label>
-        <label class="checkbox-inline checkbox-success">
-          <input type="checkbox" id="permissions_checkbox2" name="view_transductors" {{view_transductors}}> Manage Transductors
-        </label>
-        <label class="checkbox-inline checkbox-success">
-          <input type="checkbox" id="permissions_checkbox3" name="edit_users" {{edit_users}} > Edit Users
-        </label>
-        <label class="checkbox-inline checkbox-success">
-          <input type="checkbox" id="permissions_checkbox3" name="delete_users" {{delete_users}}> Delete Users
-        </label>
-
-
-      </div>
-      <button type="submit" class="btn btn-success" style="width: 520px; height: 50px">Register</button>
-
-      <p><a class="btn btn-primary btn-lg" href="{% url 'users:list_user_edit' %}" role="button" style="width: 520px; height: 50px">Cancel &raquo;</a></p>
-
-
-    </form>
-
+    </div>
   </div>
 </div>
 {% endblock %}
