Fixing translation and report view
Signed-off-by: Ulysses <ulysses3353@gmail.com>
Signed-off-by: Luis Henrique <luishng123@gmail.com>

--- a/SME_UnB/templates/base.html
+++ b/SME_UnB/templates/base.html
@@ -36,6 +36,8 @@
                 <li><a href="#contact">{% trans "Contact" %}</a></li>
                 <li><a href="{% url 'users:login'%}">{% trans "Login" %}</a></li>
                 {% endif %}
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
                 <li>{% include "languages.html" %}</li>
               </ul>
             </div>
