--- a/SME_UnB/templates/base.html
+++ b/SME_UnB/templates/base.html
@@ -1,76 +1,66 @@
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_messages %}
-{% load i18n %}
-
-{% load staticfiles %}
+{% load bootstrap3 %} {% bootstrap_css %} {% bootstrap_messages %} {% load i18n %} {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static 'data_reader/css/style.css' %}" />
 
 <head>
-  {% block title %}
-  <title>SME - UnB</title>
-  {% endblock %}
-  <link rel="stylesheet" type="text/css" href="{% static 'users/css/simple-sidebar.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'data_reader/css/style.css' %}" />
-  <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"  media="screen,projection"/>
+    {% block title %}
+    <title>SME - UnB</title>
+    {% endblock %}
+    <link rel="stylesheet" type="text/css" href="{% static 'users/css/simple-sidebar.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'data_reader/css/style.css' %}" />
+    <link type="text/css" rel="stylesheet" href="{% static " css/style.css " %}" media="screen,projection" />
+    <script src="https://js.pusher.com/3.2/pusher.min.js"></script>
 </head>
+
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 0px;">
-          <div class="container">
+        <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-              </button>
-              {% if user.is_authenticated %}
-                <a class="navbar-brand" href="{% url 'users:dashboard'%}">SME - UnB</a>
-              {% else %}
-                <a class="navbar-brand" href="/">SME - UnB</a>
-              {% endif %}
+              </button> {% if user.is_authenticated %}
+                <a class="navbar-brand" href="{% url 'users:dashboard'%}">SME - UnB</a> {% else %}
+                <a class="navbar-brand" href="/">SME - UnB</a> {% endif %}
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 {% if user.is_authenticated %}
-                  <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav">
                     <li><a href="#about">{% trans "About" %}</a></li>
                     <li><a href="#contact">{% trans "Contact" %}</a></li>
-                  </ul>
-                  <div class="navbar-right">
+                </ul>
+                <div class="navbar-right">
                     <ul class="nav navbar-nav navbar-right">
-                      <li class="">{% include "languages.html" %}</li>
+                        <li class="">{% include "languages.html" %}</li>
                     </ul>
                     <ul class="nav navbar-nav">
-                      <li><a href="{% url 'users:dashboard'%}"><b>{{ request.user.username }}</b></a></li>
+                        <li><a href="{% url 'users:dashboard'%}"><b>{{ request.user.username }}</b></a></li>
                     </ul>
                     <a href="{% url 'users:logout'%}"><button type = "button" class = "btn btn-danger navbar-btn">
                       <span class= "glyphicon glyphicon-log-out" aria-hidden="true"> </span> {% trans "Logout" %}
                       </button></a>
-                  </div>
+                </div>
                 {% else %}
-                  <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav">
                     <li><a href="#about">{% trans "About" %}</a></li>
                     <li><a href="#contact">{% trans "Contact" %}</a></li>
-                  </ul>
-                  <div class=" navbar-right">
+                </ul>
+                <div class=" navbar-right">
                     <ul class="nav navbar-nav navbar-right">
-                      <li class="">{% include "languages.html" %}</li>
+                        <li class="">{% include "languages.html" %}</li>
                     </ul>
                     <a href="{% url 'users:login'%}">
-                      <button type = "button" class = "btn btn-default navbar-btn">
+                        <button type="button" class="btn btn-default navbar-btn">
                         <span class= "glyphicon glyphicon-log-in" aria-hidden="true"> </span> {% trans "Login" %}
                       </button>
                     </a>
-                  </div>
+                </div>
                 {% endif %}
             </div>
-          </div>
-        </nav>
-        </div><!--/.nav-collapse -->
-      </div>
+        </div>
     </nav>
     <div class="container-fluid" style="padding-top: 50px;">
-      {% block body %}
-      {% endblock %}
+        {% block body %} {% endblock %}
     </div>
 </body>
