implementing notification.html
Signed-off-by: CaioGabrielAraujo <caiohgabriel@gmail.com>
Signed-off-by: Thiago Kairala <thiagor.kairala@gmail.com>

--- a/SME_UnB/data_reader/static/data_reader/css/style.css
+++ b/SME_UnB/data_reader/static/data_reader/css/style.css
@@ -27,3 +27,9 @@ th {
 body {
     margin-left: 0px;
 }
+.custom-alert{
+    position: absolute;
+    z-index: 1050;
+    right: 20;
+    top: 70;
+}
