--- a/SME_UnB/templates/base.html
+++ b/SME_UnB/templates/base.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" type="text/css" href="{% static 'data_reader/css/style.css' %}" />
     <link type="text/css" rel="stylesheet" href="{% static " css/style.css " %}" media="screen,projection" />
     <script src="https://js.pusher.com/3.2/pusher.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 <body>
+    {% include "notification.html" %}
     <nav class="navbar navbar-inverse navbar-fixed-top" style="margin-bottom: 0px;">
         <div class="container">
             <div class="navbar-header">
