--- a/SME_UnB/users/templates/users/dashboard.html
+++ b/SME_UnB/users/templates/users/dashboard.html
@@ -41,9 +41,13 @@
   var pusher = new Pusher('01346f7690ac693e7adb', {
     encrypted: true
   });
-
+  console.log('notification_'+'{{request.user.id}}');
   var channel = pusher.subscribe('notification_'+'{{request.user.id}}');
   channel.bind('create', function(data) {
-    alert(data.message);
+    alert("oi")
+    $("#allert-container").append('<div class="alert alert-danger "> '+
+                                    '<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> '+
+                                    '<strong>Danger!</strong> This alert box could indicate a dangerous or potentially negative action.'+
+                                    '</div>')
   });
 </script>
